# AI_Engineer_team

./: README.md
ai_engineers/: README.md  pyproject.toml
ai_engineers/src/ai_engineers/: crew.py  main.py
