[project]
name = "ai_engineers"
version = "0.1.0"
description = "AI_engineers using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
ai_engineers = "ai_engineers.main:run"
run_crew = "ai_engineers.main:run"
train = "ai_engineers.main:train"
replay = "ai_engineers.main:replay"
test = "ai_engineers.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
